# navya

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
core/: settings.py  urls.py  views.py
mutual_funds/: admin.py  models.py  serializers.py  urls.py  views.py
mutual_funds/migrations/: 0001_initial.py  0002_alter_mutualfund_options_alter_mutualfund_name_and_more.py
payment_module/: apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
payment_module/management/commands/: custom_grpc_runner.py
payment_module/protos/: account.proto  account_pb2.py  account_pb2_grpc.py
reports/: serializers.py  tests.py  urls.py  views.py
templates/payment_module/: esewa_test.html
user_investments/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
user_investments/migrations/: 0001_initial.py
users/: admin.py  serializers.py  tests.py  urls.py  views.py
